--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,72 @@
 <html lang="tr">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/footer.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Nosbir is a community app." />
+    <title>Nosbir | sosyal paylaşım diyarı</title>
+
+    <meta name="title" content="Nosbir | sosyal paylaşım diyarı" />
+    <meta
+      name="description"
+      content="Nosbir gruplar üzerine kurulu kaliteyi esas almış sosyal paylaşım dünyası"
+    />
+    <meta
+      name="keywords"
+      content="nosbir,grup,sosyal medya,medya,paylaşım,ekşi,onedio,facebook,gruplar,reddit"
+    />
+    <meta name="robots" content="index, follow" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="copyright" content="(c) 2019" />
+
+    <!-- Twitter Tags -->
+
+    <meta name="twitter:card" content="summary_large_image" />
+
+    <meta name="twitter:title" content="Nosbir | sosyal paylaşım diyarı" />
+
+    <meta
+      name="twitter:description"
+      content="Gruplara katıl kaliteli sohbetin parçası ol."
+    />
+
+    <meta name="twitter:url" content="nosbir.com/nosbir" />
+
+    <meta
+      name="twitter:image"
+      content="api.nosbir.com/resimler/nosbir-icon.png"
+    />
+
+    <!-- Facebook Tags -->
+
+    <meta property="og:type" content="article" />
+
+    <meta property="og:site_name" content="Nosbir | sosyal paylaşım diyarı" />
+
+    <meta property="og:locale" content="tr_TR" />
+
+    <meta property="og:title" content="Nosbir | sosyal paylaşım diyarı" />
+
+    <meta
+      property="og:description"
+      content="Gruplara katıl kaliteli sohbetin parçası ol."
+    />
+
+    <meta
+      property="og:url"
+      content="nosbir.com"
+    />
+
+    <meta
+      property="og:image"
+      content="api.nosbir.com/resimler/nosbir-logo.png"
+    />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
     />
-    <link rel="stylesheet" href="/style.css"/>
+    <link rel="stylesheet" href="/style.css" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -25,7 +82,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Nosbir</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
